--- a/meal.html
+++ b/meal.html
@@ -83,6 +83,24 @@
         </div>
       </div>
     </main>
+    <div id="chatbot-icon" class="chatbot-icon">
+      <img src="chatbotLogo.webp" alt="Chatbot" />
+    </div>
+    <div id="chatbot-window" class="chatbot-window">
+      <div class="chatbot-header">
+        <h3>Nutrition Chatbot</h3>
+        <button id="close-chatbot">X</button>
+      </div>
+      <div class="chatbot-messages" id="chatbot-messages"></div>
+      <div class="chatbot-input">
+        <input
+          type="text"
+          id="chatbot-input"
+          placeholder="Ask about nutrition..."
+        />
+        <button id="send-chatbot">Send</button>
+      </div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="meal.js"></script>
   </body>
