--- a/meal.html
+++ b/meal.html
@@ -101,7 +101,7 @@
         <button id="send-chatbot">Send</button>
       </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="meal.js"></script>
   </body>
 </html>
